--- a/.env.example
+++ b/.env.example
@@ -70,7 +70,7 @@ LMSTUDIO_API_BASE_URL=
 # You only need this environment variable set if you want to use xAI models
 XAI_API_KEY=
 
-# Get your Perplexity API Key here - 
+# Get your Perplexity API Key here -
 # https://www.perplexity.ai/settings/api
 # You only need this environment variable set if you want to use Perplexity models
 PERPLEXITY_API_KEY=
@@ -79,9 +79,20 @@ PERPLEXITY_API_KEY=
 VITE_LOG_LEVEL=debug
 
 # Example Context Values for qwen2.5-coder:32b
-# 
+#
 # DEFAULT_NUM_CTX=32768 # Consumes 36GB of VRAM
 # DEFAULT_NUM_CTX=24576 # Consumes 32GB of VRAM
 # DEFAULT_NUM_CTX=12288 # Consumes 26GB of VRAM
 # DEFAULT_NUM_CTX=6144 # Consumes 24GB of VRAM
 DEFAULT_NUM_CTX=
+
+
+# Get your AWS Access Key ID and Secret Access Key
+# You can use us-east-1 or us-west-2 region
+AMAZON_BEDROCK_REGION=us-west-2
+AMAZON_BEDROCK_ACCESS_KEY_ID=
+AMAZON_BEDROCK_SECRET_ACCESS_KEY=
+AMAZON_BEDROCK_SESSION_TOKEN=
+
+
+
